# ssb-befolkning-fagfunksjoner

./: .cookiecutter.json  .cruft.json  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  reference.md  ssb_befolkning_fagfunksjoner.bef_variables.rst  ssb_befolkning_fagfunksjoner.date_utils.rst  ssb_befolkning_fagfunksjoner.demographics.rst  ssb_befolkning_fagfunksjoner.generelle_sjekker.rst  ssb_befolkning_fagfunksjoner.klass_utils.rst  ssb_befolkning_fagfunksjoner.rst
src/ssb_befolkning_fagfunksjoner/: __init__.py  __main__.py  versions.py
src/ssb_befolkning_fagfunksjoner/bef_variables/: __init__.py  population.py
src/ssb_befolkning_fagfunksjoner/conting/: beta_mode.R  bict.R  bict.py  bict_fit.R  formula_to_index.R
src/ssb_befolkning_fagfunksjoner/date_utils/: __init__.py  _date_utils.py  _inputs.py  _labels.py  date_parameters.py  date_utils.py  dates.py  event_params.py  periods.py
src/ssb_befolkning_fagfunksjoner/date_utils.py/: core.py  input_date_utils.py
src/ssb_befolkning_fagfunksjoner/dateutils/: __init__.py  date_tools.py  input_function.py
src/ssb_befolkning_fagfunksjoner/demographics/: __init__.py  birth_rates.py  death_rates.py  order_country_codes.py  test_birth_rates.py  test_birth_rates.txt
src/ssb_befolkning_fagfunksjoner/demographics/birth_rates/: birth_rates.py
src/ssb_befolkning_fagfunksjoner/generelle_sjekker/: __init__.py  dublettsjekk.py  nytt_pythonscript.py  sml_rader.py
src/ssb_befolkning_fagfunksjoner/klass_utils/: __init__.py  change_mapping.py  klass_change_mapping.py  komm_nr.py  level_mapping.py  loaders.py  mappers.py
src/ssb_befolkning_fagfunksjoner/kommnr/: __init__.py  changes.py  update.py  validate.py
src/ssb_befolkning_fagfunksjoner/municipality_codes/: _logging_utils.py  update_codes.py  validation.py
src/ssb_befolkning_fagfunksjoner/versions/: __init__.py  _numbering.py  _path.py  _versions.py  _writers.py  versions.py
tests/: __init__.py  conftest.py  test_functions.py  test_main.py  test_versions.py  test_write_versioned_pandas.py
tests/date_utils/: test_date_parameters.py  test_dates.py  test_eventparams_label.py  test_eventparams_window.py  test_periods.py
tests/dateutils/: test_core.py  test_date_tools.py  test_input_function.py
tests/demographics/: test_birth_rate_helpers.py  test_birth_rates.py  test_dublettsjekk.py  test_middelfolkemengde.py
tests/generelle_sjekker/: test_dublettsjekk.py
tests/klass_utils/: test_change_mapping.py  test_change_tables.py  test_komm_nr_changes.py  test_komm_nr_update.py  test_komm_nr_validate.py  test_level_mapping.py
tests/kommnr/: test_changes.py  test_update.py  test_validate.py
tests/municipality_codes/: test_update_municipality_codes.py
tests/versions/: test_deconstruct_file_pattern.py  test_get_next_version_number.py  test_version_number.py  test_versioned_pandas.py  test_versions.py  test_write_versioned_pandas.py
