[project]
name = "ssb-befolkning-fagfunksjoner"
version = "0.0.12"
description = "Befolkning Fagfunksjoner"
license = "MIT"
readme = "README.md"
authors = [{name = "Stian Nergård", email = "grd@ssb.no"}]
requires-python = ">=3.10,<4.0"
dependencies = [
    "click (>=8.0.1)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "dapla-toolbelt (>=4.0.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "universal-pathlib (>=0.2.6,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ssb-klass-python (>=1.0.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "networkx (<3.5)",
    "types-networkx (>=3.5.0.20251001,<4.0.0.0)",
    "types-python-dateutil (>=2.9.0.20250822,<3.0.0.0)"
    ]
classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://github.com/statisticsnorway/ssb-befolkning-fagfunksjoner"
repository = "https://github.com/statisticsnorway/ssb-befolkning-fagfunksjoner"
documentation = "https://statisticsnorway.github.io/ssb-befolkning-fagfunksjoner"
Changelog = "https://github.com/statisticsnorway/ssb-befolkning-fagfunksjoner/releases"

[project.scripts]
ssb-befolkning-fagfunksjoner = "ssb_befolkning_fagfunksjoner.__main__:main"

[tool.poetry]
packages = [{ include = "ssb_befolkning_fagfunksjoner", from = "src" }]
requires-poetry = '>=2.0.0'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = { extras = ["jupyter"], version = ">=23.1.0" }
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = ">=0.0.284"
pytest = "^8.4.1"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
pytest-mock = "^3.14.1"
pandas-stubs = "^2.2.3.250308"
deptry = ">=0.23.0"
types-tabulate = "^0.9.0.20241207"


[tool.poetry.group.docs.dependencies]
sphinx = "<8.2.3"
sphinx-autodoc-typehints = "<=3.1.0"
sphinx-click = "^6.0.0"
furo = "^2025.7.19"
myst-parser = "^4.0.1"
sphinx-autobuild = "<2025.8.25"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ssb_befolkning_fagfunksjoner", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
disable_error_code = ["typeddict-item", "no-untyped-def"]
exclude = ["tests"]

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
